[package]
name = "pixed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.12.1"
bevy-inspector-egui = "0.21"
bevy_asset_loader = "0.18"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
bevy_egui = "0.24"
bevy_pancam = { version = "0.10", features = ["bevy_egui"] }
egui = "0.24.1"
ron = "0.8.1"
serde = "1.0"

[features]
default = [ "hot", "dyn" ]
hot = [ "bevy/file_watcher" ]
dyn = [ "bevy/dynamic_linking" ]


[profile.dev]
incremental = true
